--- a/app/src/main/res/layout/activity_profile_checkin_main.xml
+++ b/app/src/main/res/layout/activity_profile_checkin_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
+            android:onClick="onCloseClicked"
             android:background="@drawable/ic_close_black_24dp" />
 
         <LinearLayout
@@ -31,7 +32,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="400dp">
 
 
                 <com.quintus.labs.datingapp.Utils.SquareImageView
