--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
 
     <gradient
-        android:angle="45"
+        android:angle="180"
         android:endColor="#B224EF"
         android:startColor="#7579FF"
         android:type="linear" />
 
     <corners
-        android:radius="100dp"/>
+        android:radius="0dp"/>
 
 </shape>
