--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,18 +27,18 @@
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="30dp"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/logo" />
 
-                <com.quintus.labs.datingapp.customfonts.MyTextView_GreatVibes_Regular
+                <com.quintus.labs.datingapp.customfonts.TextViewBold
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -58,11 +58,11 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="80dp"
                     android:layout_marginBottom="8dp"
                     android:gravity="bottom">
 
-                    <EditText
+                    <com.quintus.labs.datingapp.customfonts.EditTextRegular
                         android:id="@+id/input_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -74,13 +74,13 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="80dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:gravity="bottom"
                     app:passwordToggleEnabled="true">
 
-                    <EditText
+                    <com.quintus.labs.datingapp.customfonts.EditTextRegular
                         android:id="@+id/input_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -90,19 +90,19 @@
                         android:padding="15dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <androidx.appcompat.widget.AppCompatButton
+                <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
                     android:id="@+id/btn_login"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
                     android:layout_marginBottom="25dp"
                     android:background="@drawable/white_rounded_button"
-                    android:padding="12dp"
+                    android:padding="15dp"
                     android:text="Login"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
-                <TextView
+                <com.quintus.labs.datingapp.customfonts.TextViewSemiBold
                     android:id="@+id/link_signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
