--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -50,12 +50,12 @@
                     android:layout_height="161dp"
                     android:layout_centerInParent="true"
                     android:layout_marginTop="59dp"
-                    android:src="@drawable/monkey"
+                    android:src="@drawable/user1"
                     app:civ_border_color="@color/transparentPink"
                     app:civ_border_width="2dp" />
             </com.quintus.labs.datingapp.Utils.PulsatorLayout>
 
-            <TextView
+            <com.quintus.labs.datingapp.customfonts.TextViewBold
                 android:id="@+id/profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -63,6 +63,16 @@
                 android:text="Santosh Kumar"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
+
+            <com.quintus.labs.datingapp.customfonts.TextViewRegular
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:textSize="14dp"
+                android:gravity="center"
+                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. "/>
+
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -112,7 +122,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"></LinearLayout>
+            android:layout_weight="3">
+
+        </LinearLayout>
 
         <!--dfs-->
     </LinearLayout>
