--- a/app/src/main/res/layout/activity_register_age.xml
+++ b/app/src/main/res/layout/activity_register_age.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <com.quintus.labs.datingapp.customfonts.TextViewSemiBold
         android:id="@+id/numberOfPagesLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_margin="20dp"
@@ -30,12 +30,12 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/logo" />
 
-        <com.quintus.labs.datingapp.customfonts.MyTextView_GreatVibes_Regular
+        <com.quintus.labs.datingapp.customfonts.TextViewBold
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -53,7 +53,7 @@
         android:orientation="vertical">
 
 
-        <TextView
+        <com.quintus.labs.datingapp.customfonts.TextViewBold
             android:id="@+id/getStartedTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -80,7 +80,7 @@
             android:datePickerMode="spinner"
             android:yearListSelectorColor="@color/colorPrimaryDark" />
 
-        <Button
+        <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
             android:id="@+id/ageContinueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
