--- a/app/src/main/res/layout/activity_register_gender.xml
+++ b/app/src/main/res/layout/activity_register_gender.xml
@@ -6,12 +6,16 @@
     * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
     -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+    <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <com.quintus.labs.datingapp.customfonts.TextViewSemiBold
         android:id="@+id/numberOfPagesLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,7 +29,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_margin="20dp"
@@ -33,12 +37,12 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/logo" />
 
-        <com.quintus.labs.datingapp.customfonts.MyTextView_GreatVibes_Regular
+        <com.quintus.labs.datingapp.customfonts.TextViewBold
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -55,7 +59,7 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <TextView
+        <com.quintus.labs.datingapp.customfonts.TextViewBold
             android:id="@+id/getStartedTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -72,7 +76,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
                 android:id="@+id/maleSelectionButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,7 +90,7 @@
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
-            <Button
+            <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
                 android:id="@+id/femaleSelectionButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -103,7 +107,7 @@
 
         </LinearLayout>
 
-        <Button
+        <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
             android:id="@+id/genderContinueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -120,3 +124,4 @@
     </LinearLayout>
 
 </RelativeLayout>
+</ScrollView>
