--- a/app/src/main/res/layout/activity_register_hobby.xml
+++ b/app/src/main/res/layout/activity_register_hobby.xml
@@ -10,7 +10,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <com.quintus.labs.datingapp.customfonts.TextViewBold
         android:id="@+id/numberOfPagesLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_margin="20dp"
@@ -32,12 +32,12 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/logo" />
 
-        <com.quintus.labs.datingapp.customfonts.MyTextView_GreatVibes_Regular
+        <com.quintus.labs.datingapp.customfonts.TextViewBold
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -54,7 +54,7 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <TextView
+        <com.quintus.labs.datingapp.customfonts.TextViewBold
             android:id="@+id/getStartedTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
                 android:id="@+id/sportsSelectionButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
-            <Button
+            <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
                 android:id="@+id/travelSelectionButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
                 android:id="@+id/musicSelectionButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -121,7 +121,7 @@
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
-            <Button
+            <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
                 android:id="@+id/fishingSelectionButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -138,7 +138,7 @@
 
         </LinearLayout>
 
-        <Button
+        <com.quintus.labs.datingapp.customfonts.ButtonSemiBold
             android:id="@+id/hobbiesContinueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
