--- a/app/src/main/res/layout/matched_user_item.xml
+++ b/app/src/main/res/layout/matched_user_item.xml
@@ -26,7 +26,7 @@
         android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
-        <com.quintus.labs.datingapp.customfonts.MyTextView_Roboto_Bold
+        <com.quintus.labs.datingapp.customfonts.TextViewBold
             android:id="@+id/mui_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
