--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    * DatingApp
     * https://github.com/quintuslabs/DatingApp
     * Created on 25-sept-2018.
     * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
     -->
 <resources>
-    <color name="colorPrimary">#d13135</color>
-    <color name="colorPrimaryDark">#d13135</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#7579FF</color>
+    <color name="colorPrimaryDark">#7579FF</color>
+    <color name="colorAccent">#B224EF</color>
 
     <color name="transparentPink">#99FF4081</color>
 
@@ -138,6 +137,11 @@
 
 
     <color name="color">#767578</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
 
 
     <!-- 100% — FF
